--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -16,6 +16,18 @@
             <span class="nav-link-text">Dashboard</span>
             </a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link active" routerLink="/layout/showdetails">
+            <i class="ni ni-tv-2 text-primary"></i>
+            <span class="nav-link-text">deatils of Developers</span>
+            </a>
+        </li>
+        <!-- <li class="nav-item">
+            <a class="nav-link active" routerLink="/layout/notifications">
+            <i class="ni ni-tv-2 text-primary"></i>
+            <span class="nav-link-text">view all</span>
+            </a>
+        </li> -->
         <!-- <li class="nav-item">
             <a class="nav-link" href="examples/icons.html">
             <i class="ni ni-planet text-orange"></i>
