--- a/src/app/topbar/topbar.component.html
+++ b/src/app/topbar/topbar.component.html
@@ -140,7 +140,7 @@
                 </a>
               </div>
               <!-- View all -->
-              <a href="#!" class="dropdown-item text-center text-primary font-weight-bold py-3">View all</a>
+              <a routerLink="/layout/shownotification"  class="dropdown-item text-center text-primary font-weight-bold py-3">View All</a>
             </div>
           </li>
           <li class="nav-item dropdown">
@@ -197,7 +197,7 @@
                   <img alt="Image placeholder" src="../../assets/template/img/theme/team-4.jpg">
                 </span>
                 <div class="media-body  ml-2  d-none d-lg-block">
-                  <span class="mb-0 text-sm  font-weight-bold">John Snow</span>
+                  <span class="mb-0 text-sm  font-weight-bold">Webismizing Media</span>
                 </div>
               </div>
             </a>
