--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,14 +1,15 @@
 <div class="header bg-primary pb-6">
-    <div class="container-fluid">
       <div class="header-body">
-        <div class="row align-items-center py-4">
-          <div class="col-lg-6 col-7">
+    <div class="container-fluid"style="min-height:1200px; background-image: url(../../assets/template/img/theme/welcome1.jpg); background-size: cover; background-position: center top;">
+      <div class="row align-items-center py-4">
+          <div class="col-lg-6 col-7" >
             <h6 class="h2 text-white d-inline-block mb-0">Default</h6>
             <nav aria-label="breadcrumb" class="d-none d-md-inline-block ml-md-4">
               <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
                 <li class="breadcrumb-item"><a href="#"><i class="fas fa-home"></i></a></li>
                 <li class="breadcrumb-item"><a href="#">Dashboards</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Developers</li>
+                <li class="breadcrumb-item active" aria-current="page">Webismizing Media</li>
+                
               </ol>
             </nav>
           </div>
@@ -110,10 +111,11 @@
     </div>
   </div>
   <div class="table-responsive">
+    
     <!-- Projects table -->
       <!-- Card header -->
       <div class="card-header border-0">
-        <h3 class="mb-0">List of Developers</h3>
+        <h3 class="mb-0">List of Developers </h3>
       </div>
     <table class="table align-items-center table-flush">
       <thead class="thead-light">
